--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "qliphoth",
-  "version": "1.0.0",
+  "name": "getargs",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/Qliphoth-commonjs.js",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "deepmerge": "^4.2.2",
+    "generate-source-map": "0.0.5",
+    "rollup": "^1.27.8",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-require-context": "^1.0.0",
+    "rollup-plugin-uglify": "^6.0.3"
+  },
   "scripts": {
+    "build": "rollup -c",
+    "build-production": "NODE_ENV=production && rollup -c --environment NODE_ENV:production",
+    "build-production-windows": "set NODE_ENV=production && rollup -c --environment NODE_ENV:production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/L1lith/Qliphoth.git"
+    "url": "git+https://github.com/L1lith/Liliths-Templates.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/L1lith/Qliphoth/issues"
-  },
-  "homepage": "https://github.com/L1lith/Qliphoth#readme"
+  "author": "05L1",
+  "license": "MIT"
 }
