--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "chai": "^4.2.0",
     "deepmerge": "^4.2.2",
     "generate-source-map": "0.0.5",
+    "mocha": "^8.2.1",
     "rollup": "^1.27.8",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -20,7 +22,7 @@
     "build": "rollup -c",
     "build-production": "NODE_ENV=production && rollup -c --environment NODE_ENV:production",
     "build-production-windows": "set NODE_ENV=production && rollup -c --environment NODE_ENV:production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha \"tests/**/*.js\""
   },
   "repository": {
     "type": "git",
