--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@rollup/plugin-typescript": "^8.0.0",
     "chai": "^4.2.0",
     "deepmerge": "^4.2.2",
     "generate-source-map": "0.0.5",
@@ -16,7 +17,8 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-require-context": "^1.0.0",
-    "rollup-plugin-uglify": "^6.0.3"
+    "rollup-plugin-uglify": "^6.0.3",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "build": "rollup -c",
